--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html ng-app='pink'>
 <head>
-	<title>Kitchen Dreaming</title>
+	<title>Cotton Candy Kitchen Dreams</title>
 </head>
 	<link rel="stylesheet" type="text/css" href="style.css">
 <body>
 	<header>
 		<a ui-sref='products'>go shopping</a>
 		<div>login</div>
-		<div>cart</div>
+		<a ui-sref='cart'>cart</a>
 	</header>
 
 <ui-view></ui-view>
@@ -22,6 +22,7 @@
  <script src='js/services/mainSrv.js'></script>
  <script src='js/mainCtrl.js'></script>
  <script src='js/productCtrl.js'></script>
+ <script src='js/cartCtrl.js'></script>
  
 
 
