updated to post to db

--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,11 @@
  <script src='js/mainCtrl.js'></script>
  <script src='js/productCtrl.js'></script>
  <script src='js/cartCtrl.js'></script>
- 
+ <script src='js/checkoutCtrl.js'></script>
+ <script src="js/paymentCtrl.js"></script>
+
+
+
 
 
 </body>
