--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html ng-app='pink'>
 <head>
-	<title>Cotton Candy Kitchen Dreams</title>
+	<title class>Cotton Candy Kitchen Dreams</title>
 </head>
 	<link rel="stylesheet" type="text/css" href="style.css">
 <body>
 	<header>
-		<a ui-sref='products'>go shopping</a>
-		<div>login</div>
-		<a ui-sref='cart'>cart</a>
+		<img src="../images/shopping-bag-icon-5.png" ui-sref='cart' style="height:50px; width:50px" class='bag'>
 	</header>
 
 <ui-view></ui-view>
